# pm

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
backend/: AGENTS.md  pyproject.toml
backend/app/: ai.py  ai_chat_schema.py  board_schema.py  default_board.py  main.py  repository.py
backend/data/: app.db
backend/db/: schema.sql
backend/tests/: conftest.py  test_ai.py  test_board_api.py  test_main.py  test_repository.py
docs/: AI.md  DATABASE.md  PLAN.md  REVIEW.md  code_review.md
frontend/: AGENTS.md  playwright.config.ts
frontend/src/app/: page.tsx
frontend/src/components/: AiSidebar.tsx  AuthGate.test.tsx  AuthGate.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx
frontend/src/lib/: api.test.ts  api.ts
frontend/src/test/: setup.ts
frontend/tests/: kanban.spec.ts  persistence.spec.ts
scripts/: AGENTS.md  start-linux.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
