[project]
name = "pm-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "asyncio>=4.0.0",
  "fastapi==0.116.1",
  "httpx==0.28.1",
  "uvicorn[standard]==0.35.0",
]

[dependency-groups]
dev = [
  "pytest==8.4.1",
  "httpx==0.28.1",
]

[tool.pytest.ini_options]
pythonpath = [".."]

[tool.uv]
package = false
